--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     kapt androidKaptLibs.values()
 
     testImplementation testLibs.values()
+    testImplementation androidxTestLibs.values()
     androidTestImplementation androidTestLibs.values()
 }
