--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
@@ -34,7 +34,7 @@ allprojects {
                 glide               : 'com.github.bumptech.glide:glide:4.11.0',
                 dexter              : 'com.karumi:dexter:6.0.2',
                 navigation          : 'androidx.navigation:navigation-fragment-ktx:2.2.1',
-                navigationUI          : 'androidx.navigation:navigation-ui-ktx:2.2.1',
+                navigationUI        : 'androidx.navigation:navigation-ui-ktx:2.2.1',
         ]
 
         androidKaptLibs = [
@@ -48,19 +48,19 @@ allprojects {
         ]
 
         libs = [
-                okhttpLoginInterceptor   : 'com.squareup.okhttp3:logging-interceptor:4.2.1',
-                retrofit                 : 'com.squareup.retrofit2:retrofit:2.7.2',
-                retrofitGsonConverter    : 'com.squareup.retrofit2:converter-gson:2.7.2',
-                koin                     : "org.koin:koin-androidx-viewmodel:2.1.5"
+                okhttpLoginInterceptor: 'com.squareup.okhttp3:logging-interceptor:4.2.1',
+                retrofit              : 'com.squareup.retrofit2:retrofit:2.7.2',
+                retrofitGsonConverter : 'com.squareup.retrofit2:converter-gson:2.7.2',
+                koin                  : "org.koin:koin-androidx-viewmodel:2.1.5"
         ]
 
         testLibs = [
-                junit        : 'junit:junit:4.12',
-                mockitoKotlin: "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0",
-                mockitoInline: "org.mockito:mockito-inline:2.28.2",
+                junit         : 'junit:junit:4.12',
+                mockitoKotlin : "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0",
+                mockitoInline : "org.mockito:mockito-inline:2.28.2",
                 coroutinesTest: 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9',
-                koinTest     : 'org.koin:koin-test:2.1.1',
-                testShared: project(':testShared')
+                koinTest      : 'org.koin:koin-test:2.1.1',
+                testShared    : project(':testShared')
         ]
 
         androidxTestLibs = [
@@ -68,8 +68,13 @@ allprojects {
         ]
 
         androidTestLibs = [
-                testRunner: 'androidx.test:runner:1.2.0',
-                espresso  : 'androidx.test.espresso:espresso-core:3.2.0'
+                testRunner   : 'androidx.test:runner:1.2.0',
+                espresso     : 'androidx.test.espresso:espresso-contrib:3.2.0',
+                rules        : 'androidx.test:rules:1.2.0',
+                extJunit     : 'androidx.test.ext:junit-ktx:1.1.1',
+                koinTest     : 'org.koin:koin-test:2.1.1',
+                mockWebServer: 'com.squareup.okhttp3:mockwebserver:4.2.1',
+                okhttpIdling : 'com.jakewharton.espresso:okhttp3-idling-resource:1.0.0'
         ]
     }
 }
